Implemented IP directional commands

--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,4 @@
-OBJS = cbi.o stack.o
+OBJS = cbi.o stack.o delta.o
 CC = gcc
 LFLAGS = -Wall -Wextra -std=c99 -g
 CFLAGS = $(LFLAGS) -c
@@ -9,11 +9,14 @@ cbi_win : $(OBJS)
 cbi_linux : $(OBJS)
 	$(CC) $(LFLAGS) $(OBJS) -o cbi
 
-cbi.o : cbi.c stack.h
+cbi.o : cbi.c stack.h delta.h
 	$(CC) $(CFLAGS) cbi.c
 
 stack.o : stack.c stack.h
 	$(CC) $(CFLAGS) stack.c
+
+delta.o : delta.c delta.h
+	$(CC) $(CFLAGS) delta.c
 
 win: cbi_win
 
